--- a/deployment.yml
+++ b/deployment.yml
@@ -23,7 +23,7 @@ spec:
     spec: # Pod spec
       containers:
       - name: amazon-container
-        image: ooghenekaro/amazon:65
+        image: mosessaah/amazon:65
         ports:
         - containerPort: 3000
         
